--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,12 @@
 <div class="header">
   <ul class="nav nav-pills pull-right">
-    <li class="active"><a href="">Torrents</a></li>
+    <li class="active"><a href="">Торренты</a></li>
     <li>
       <a href="https://github.com/asapach/peerflix-server" target="_blank">
         <i class="fa fa-github"></i> About</a>
     </li>
   </ul>
-  <h3 class="text-muted text-nowrap"><img src="images/logo.svg" alt="logo" height="40"> peerflix server</h3>
+  <h3 class="text-muted text-nowrap"><img src="images/logo.svg" alt="logo" height="40"> PeerFlix сервер</h3>
 </div>
 
 <div class="jumbotron" ng-file-drop ng-file-change="upload($files)">
@@ -19,11 +19,11 @@
   </div>
   <a class="btn btn-success" href="" ng-click="download()">
     <span class="fa fa-cloud-download"></span>
-    Download
+    Скачать
   </a>
   <p class="text-right">
     <i class="fa fa-upload"></i>
-    Drop .torrent files here or
+    Брось .torrent файлы сюда или
     <span class="btn-link" ng-file-select ng-file-change="upload($files)">
       browse to upload
     </span>
